--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "fastify": "^3.29.0"
+    "fastify": "^3.29.0",
+    "knex": "^2.0.0",
+    "objection": "^3.0.1",
+    "pg": "^8.7.3"
   }
 }
