--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
   "dependencies": {
+    "chai": "^4.3.6",
     "fastify": "^3.29.0",
     "knex": "^2.0.0",
+    "mocha": "^10.0.0",
     "objection": "^3.0.1",
-    "pg": "^8.7.3"
-  }
+    "pg": "^8.7.3",
+    "sinon": "^14.0.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "test": "mocha \"test/**/*.test.js\""
+  },
+  "name": "newzy",
+  "description": "Newzy is a news backend API.",
+  "version": "1.0.0",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/milhamh95/newzy.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/milhamh95/newzy/issues"
+  },
+  "homepage": "https://github.com/milhamh95/newzy#readme"
 }
