--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "chai": "^4.3.6",
+    "dotenv": "^16.0.1",
     "fastify": "^3.29.0",
     "knex": "^2.0.0",
     "mocha": "^10.0.0",
