--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.0.1",
     "fastify": "^3.29.0",
     "knex": "^2.0.0",
+    "loglevel": "^1.8.0",
     "objection": "^3.0.1",
     "pg": "^8.7.3",
     "save": "^2.5.0"
